localstack-app: fix compose and js

--- a/localstack-app/docker-compose.yml
+++ b/localstack-app/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   localstack-app:
     build:
       context: .
-    restart: always
+    restart: on-failure
     networks:
       - localdev
     environment:
