--- a/sample-app/ec2.docker-compose.yml
+++ b/sample-app/ec2.docker-compose.yml
@@ -3,7 +3,7 @@ services:
   sample-app:
     build:
       context: .
-    restart: always
+    restart: on-failure
     environment:
       DEBUG: "*"
       AWS_REGION: "eu-central-1"
